# flutter_ffi_tutorial

./: LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/jni/: CMakeLists.txt  ffi_async_utils.cpp  ffi_async_utils.h  ffi_invoke.cpp  jni_helper.cpp  jni_helper.h
android/src/main/jni/internal/: dart_api.h  dart_api_dl.c  dart_api_dl_impl.h  dart_native_api.h
android/src/main/kotlin/com/example/flutter_ffi_tutorial/: FlutterFfiTutorialPlugin.kt  HandleFFiMessageManager.kt  HandleFFiMessageManagerJava.java  Identify.kt  SimulatedResult.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_ffi_tutorial_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: ffi_async_invoke.dart  ffi_invoke.dart  main.dart
example/test/: widget_test.dart
ios/: flutter_ffi_tutorial.podspec
ios/Classes/: FlutterFfiTutorialPlugin.h  FlutterFfiTutorialPlugin.m  SwiftFlutterFfiTutorialPlugin.swift
lib/: flutter_ffi_tutorial.dart
test/: flutter_ffi_tutorial_test.dart
